--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -47,7 +47,7 @@
         <ul class="navbar-nav mb-2 mb-lg-0">
           {% if user.is_authenticated %}
               <li class="nav-item" style="padding-top: 8px;">
-                <a style = "color: black;" class="nav-link" href="#">Welcome, {{user.username}}</a>
+                <a style = "color: black;" class="nav-link" href="/user/dashboard?id={{user.id}}">Welcome, {{user.username}}</a>
               </li>
                 {% if owner is None %}
                 <li class="nav-item">
@@ -106,7 +106,6 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
   <!--Bootstrap JS-->
-
 
 
   <!--Cards-->
