fixed images not showing

--- a/restaurants/templates/user-dashboard.html
+++ b/restaurants/templates/user-dashboard.html
@@ -224,7 +224,7 @@
         {% for like in liked %}
         <div class="col-sm-4" style="padding-bottom: 20px;">
           <div class="card">
-            <img src="/static/restaurant/{{favorite.image_name}}" style="height: 300px; object-fit: cover;"
+            <img src="/static/fooditem/{{favorite.image_name}}" style="height: 300px; object-fit: cover;"
               class="card-img-top " alt="...">
             <div class="card-body">
               <h5 class="card-title">{{like.name}}</h5>
