--- a/restaurants/templates/deals.html
+++ b/restaurants/templates/deals.html
@@ -11,7 +11,7 @@
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <!--Bootstrap CSS-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
-
+  <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgb(232, 218, 68);">
     <div class="container-fluid">
