--- a/restaurants/templates/deals.html
+++ b/restaurants/templates/deals.html
@@ -116,6 +116,7 @@
           style="height: 300px; object-fit: cover;" class="card-img-top " alt="...">
         <div class="card-body">
           <h4 class="card-title">{{deal.name}}</h4>
+          <p>{{deal.restaurant}}</p>
           <form action="{% url 'clip' deal.id %}" method="post">
             {% csrf_token %}
           <button class="btn btn-outline-danger" style="border-style:dashed; border-color: red; hover-color: white;">Clip Deal <i class="fas fa-cut"></i></button>
