--- a/restaurants/templates/owner-dashboard.html
+++ b/restaurants/templates/owner-dashboard.html
@@ -251,9 +251,9 @@
           <div class="card-body">
             <h5 class="card-title">Add a Restaurant</h5>
             <p><br></p>
-            <button type="button" class="btn btn-outline-danger" style=" border-color: red; hover-color: white;"
+            <button type="button" class="btn btn-outline-success" style=" border-color: green; hover-color: white;"
               data-bs-toggle="modal" data-bs-target="#exampleModalToggle">
-              Add a Restaurant
+              Add a Restaurant +
             </button>
           </div>
         </div>
@@ -346,9 +346,9 @@
           <div class="card-body">
             <h5 class="card-title">Add a Deal</h5>
             <p><br></p>
-            <button type="button" class="btn btn-outline-danger" data-bs-target="#DealsToggle" data-bs-toggle="modal"
-              data-bs-dismiss="modal" style=" border-color: red; hover-color: white;">
-              Add a Deal
+            <button type="button" class="btn btn-outline-success" data-bs-target="#DealsToggle" data-bs-toggle="modal"
+              data-bs-dismiss="modal" style=" border-color: green; hover-color: white;">
+              Add a Deal +
             </button>
           </div>
         </div>
@@ -445,9 +445,9 @@
         {%endfor%}
         {%endif%}
         {%endfor%}
-        <button type="button" class="btn btn-outline-danger"
+        <button type="button" class="btn btn-outline-success"
           data-bs-target="#exampleModalToggle2-{{data.restaurant.id}}" data-bs-toggle="modal" data-bs-dismiss="modal"
-          style=" border-color: red; hover-color: white;">
+          style=" border-color: green; hover-color: white;">
           Add a Menu Item
         </button>
       </div>
