Buttons in User Dashboard Work

--- a/restaurants/templates/user-dashboard.html
+++ b/restaurants/templates/user-dashboard.html
@@ -221,10 +221,7 @@
           <div class="card-body">
             <h5 class="card-title">{{favorite.name}}</h5>
             <br>
-            <button type="button" class="btn btn-outline-danger" style=" border-color: red; hover-color: white;"
-              data-bs-toggle="modal" data-bs-target="#exampleModalToggle-{{favorite.id}}">
-              Menu
-            </button>
+            <a href="/loading/restaurant/?id={{favorite.name}}" class="btn btn-outline-danger" style=" border-color: red; hover-color: white;">Menu</a>
           </div>
         </div>
       </div>
